doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Users\metal\Documents\GitHub\progra_1_poo\itextpdf-5.1.0.jar.zip;C:\Users\metal\Documents\GitHub\progra_1_poo\itextpdf-5.5.13.jar;C:\Users\metal\Documents\GitHub\progra_1_poo\json-simple-1.1.1.jar;C:\Users\metal\Documents\GitHub\progra_1_poo\json-simple-1.1.1.jar.zip;C:\Users\metal\Documents\GitHub\telegrambots-2.4.4.5-jar-with-dependencies.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\metal\Documents\GitHub\progra_1_poo
-d
C:\Users\metal\Documents\GitHub\progra_1_poo\doc
-encoding
windows-1252
-charset
windows-1252
C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\usuarios\principal.java
<---- end of javadoc command ---->
Loading source file C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\usuarios\principal.java...
C:\Users\metal\Documents\GitHub\progra_1_poo\tarea_programada_1\usuarios\principal.java:194: error: illegal start of statement
                }
                ^
1 error
